fixed spacing and coloring

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-color: rgb(157, 115, 192);
+    --secondary-color: rgb(64, 12, 99);
+    --third-color: rgb(73, 46, 104);
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,10 +11,11 @@
 
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: rgb(210, 205, 248);
 }
 header {
     padding: 10px 0;
-    background-color: darkslateblue;
+    background-color: var(--third-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -17,10 +23,14 @@ header {
 }
 
 header h1 {
-    background-color: darkturquoise;
+    background-color: var(--primary-color);
     margin: 0;
     font-size: 36px;
     padding-left: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 header a{
@@ -44,83 +54,45 @@ header nav ul {
 
 header nav ul li a{
     padding: 10px 15px;
+    color: var(--primary-color);
+    font-size: 20px;
+}
+
+.hero {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-top: 20px;
+    background-image: url('../images/purple-gradient-hero-bg.jpg');
+    background-size: cover;
+}
+
+.hero img {
+    margin: 0 0 10px 50px;
+}
+
+.hero h2 {
     color: darkturquoise;
+    margin: 0 50px 10px 0;
+}
+
+.main-content {
+    display: flex;
+    /*flex-wrap: wrap;*/
+    margin: 50px;
+}
+
+.main-content h2 {
+    font-size: 40px;
+    text-align: right;
+    width: 300px;
+    padding-right: 20px;
+    color: var(--third-color);
+    text-shadow: 4px 0 3px var(--primary-color);
 }
 
 /*
-section {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    align-items: center;
-    display: inline-flex;
-    width: 100%;
-    margin: 0 auto;
-    
-}
-*/
-
-
-
-.about-me {
-    margin: 50px auto;
-    padding-bottom: 50px;
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    
-}
-.about h2 {
-    flex: 1 30%;
-}
-.about-info {
-    flex: 2 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.about-img {
-    flex: 1 20%;
-    margin-right: 20px;
-}
-
-.work {
-    margin: 50px auto;
-    padding-bottom: 50px;
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-.work h2 {
-    flex: 1 30%;
-}
-
-.work-tiles {
-    flex: 2 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.about-text {
-    flex: 12;
-}
-
-.about-text p {
-    font-size: 18px;
-}
-section div {
-    flex-wrap: wrap;
-    justify-content: space-between;
-    display: flex;
-}
-
 .div-heading {
     flex: 1 10%;
     flex-wrap: wrap;
@@ -133,11 +105,113 @@ section div {
     font-size: 40px;
     text-align: right;
 }
+*/
+
+
+.about-me {
+    /* width: 80%; */
+    display: flex;
+    /*flex-wrap: wrap;*/
+    align-items: center;
+    /*justify-content: space-between;*/
+    
+}
+/*
+.about h2 {
+    flex: 1 30%;
+    width: 300px;
+}
+*/
+.about-info {
+    border-left: var(--secondary-color) 5px solid;
+    /*flex: 2 70%;*/
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+    /*align-items: center;*/
+    padding-left: 40px;
+    width: 75%;
+}
+
+.about-img {
+    flex: 1 20%;
+    margin-right: 20px;
+}
+
+.work {
+    justify-content: space-between;
+}
+.work h2 {
+    margin-top: 30px;
+}
+
+.work-tiles {
+    /*flex: 1 70%;*/
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    /*size: 80%;*/
+    /*padding: 5px;*/
+    border-left: var(--secondary-color) solid 5px;
+}
+
+.about-text {
+    flex: 12;
+}
+
+.about-text p {
+    font-size: 18px;
+}
+section div {
+    flex-wrap: wrap;
+    /*justify-content: space-between;*/
+    display: flex;
+}
+
+/*
+.div-heading {
+    flex: 1 10%;
+    flex-wrap: wrap;
+    padding: 50px 20px;
+    border-right: darkviolet solid 3px;
+    margin-right: 50px;
+    height: 100%;
+}
+.div-heading h2 {
+    font-size: 40px;
+    text-align: right;
+}
+*/
+
+.work-tiles img {
+    display: flex;
+}
+
+.work-img {
+    position: relative;
+    max-width: 100%;
+    height: auto;
+    border: var(--primary-color) solid 8px;
+    margin-left: 32px;
+    margin-bottom: 20px;
+    /*
+    display: flex;
+    flex: 2 60%;
+    flex-wrap: wrap;
+    */
+}
+
+.img-text {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    background-color: var(--primary-color);
+    padding: 5px;
+}
 
 .contact {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     align-items: center;
 }
 
@@ -145,9 +219,15 @@ section div {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /*ustify-content: space-between;*/
+    border-left: var(--secondary-color) solid 5px;
+    padding-left: 10px;
+    align-items: center;
 }
 
 .contact ul a {
     padding: 10px 15px;
+    color: var(--secondary-color);
+    text-decoration: none;
+    font-size: 20px;
 }
